all left navs should be align left fix #62

--- a/app/assets/stylesheets/_app.sass
+++ b/app/assets/stylesheets/_app.sass
@@ -273,3 +273,7 @@
 
 .fix-clear
   clear: both
+
+.sidebar.sidebar--left
+  .ui.secondary.fluid.vertical.menu > .item
+    text-align: left
